nginx.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels: 
    app: mysql
spec:
  template:
    metadata:
      labels:
         app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql-h     # headless service
  # podManagementPolicy: Parallel or OrderedReady
  volumeCLaimTemplates:
  - metadata:
      name: data-volume
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: google-storage
      resources:
        requests:
          storage: 500Mi
