nginx.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
spec:
  # backend:
  #   serviceName: wear-service
  #   servicePort: 80
  # rules:
  # - host: ear.my-online-store.com
  #   http:
  rules:
  - http:
      paths:
      - path: /wear
        backend:
          serviceName: wear-service
          servicePort: 80
